Funcionalidades de crear, editar y eliminar articulos en el cms. En el portal web se cargan recursos tanto de omeka s como de cms

--- a/cms-simple/public/index.html
+++ b/cms-simple/public/index.html
@@ -35,6 +35,7 @@
             <div class="sidebar-footer">
                 <p class="info">Portal IIS</p>
                 <p class="date" id="currentDate"></p>
+                <p class="author" id="author">Dario Emmanuel Vázquez Ceballos</p>
             </div>
         </aside>
 
